<resources>
    <string name="app_name">Remind Me Do</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to Splash Screen -->
    <string name="mainLogo">mainLogo</string>
    <string name="welcomeText">Welcome to RemindMeDo. The app that reminds you to complete tasks based on your current location. Yes it\'s that simple</string>
    <string name="signUp">"I'm New"</string>
    <string name="logIn">Log In</string>

    <!-- Strings related to the Sign Up Screen-->
    <string name="signUpText">We recommend you use Google services to sign up as it is very likely they already collect key information to allow this app to work</string>
    <string name="signUpText2">If you would prefer to sign up manually fill out the form below!</string>
    <string name="submit">Submit</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Enter Password</string>
    <string name="verifyPassword">Confirm Password</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="houseAddress">House Address</string>
    <string name="googleSignUp">Sign up with Google Instead</string>
    <string name="radioButton">You agree to the Terms and Conditions</string>
    <string-array name="radioGroup">
        You Agree to the Terms and Conditions
        You are aware that this applications uses your current geographical location at any given
        time
    </string-array>

    <!-- Items related to Main Screen including tabbed bar and settings-->
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_locations">Locations</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="signOut"> Sign Out</string>

    <string name="personName">acct.getDisplayName()</string>
    <string name="personEmail">acct.getEmail()</string>
</resources>