<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_reminders"
            android:title="@string/menu_reminders" />

        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_location"
            android:title="@string/menu_locations" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>
</menu>