<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashScreen">

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:contentDescription="@string/mainLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/welcomeText"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/logIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>